fix(gastos):fix-error-java